# aemo-data-updater

./: .env.example  .gitignore  MIGRATION_PLAN.md  QUICK_REFERENCE.md  README.md  backfill_30min_gaps.py  check_archive_structure.py  check_data_status.py  fix_battery_charging_from_july17.py  fix_prices30_collection.py  fix_scada30_aggregation.py  pyproject.toml  recalculate_scada30.py  recalculate_scada30_corrected.py  reprocess_dispatch_scada_archive.py  reprocess_july17_aug20.py  run_dashboard.py
backfill_scripts/: README.md  analyse_price_volatility.py  analyse_rooftop_time_of_day.py  backfill_30min_from_archive.py  backfill_5min_gaps.py  backfill_curtailment.py  backfill_demand_fast.py  backfill_demand_oct.py  backfill_from_archive.py  backfill_prices5_historical.py  backfill_regional_curtailment.py  backfill_transmission_full.py  merge_historical_prices.py  merge_misplaced_demand.py  merge_transmission_backfill.py  recalculate_scada30.py  simple_merge.py  simple_merge_scada.py  simple_merge_transmission.py
old_cl/: CLAUDE_IMPLEMENTATION_PLAN.md  MIGRATION_PLAN.md  NEXT_SESSION_PROMPT.md  battery_charging_fix_summary.md  claude.md  fix_generation_stack.md
scripts/: backfill_bids.py  backfill_bids_mmsdm.py  backfill_duid_curtailment.py  bids_live_smoke.py  merge_bids_history.py
tests/: test_backfill_download.py  test_backfill_validation.py  test_bids_backfill.py  test_bids_collect.py  test_bids_dispatch.py  test_bids_mmsdm.py  test_bids_mmsdm_backfill.py  test_bids_parser.py  test_bids_store.py  test_collectors.py  test_final.py  test_fixes.py  test_simple.py  (+4 more)
(+60 files in other folders)
